# PowerGridSim

./: .gitignore  CMakeLists.txt  README.md
include/: globals.h  graph.h  renderer.h
src/: globals.cpp  graph_core.cpp  graph_layout.cpp  graph_overload.cpp  graph_simulation.cpp  main.cpp  renderer.cpp
